# watermarker

./: README.md  Run_marker.py  Ui_marker.py  marker.py  marker.ui  pyproject.toml  requirements.txt  watermarker.py
src/gui/: Ui_marker.py  main.py  marker.ui
src/watermarker/: my_blind_marker.py
