[project]
name = "watermarker"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "H1DDENADM1N", email = "65646535+H1DDENADM1N@users.noreply.github.com"},
]
dependencies = [
    "PySide6==6.6.3.1",
    "Pillow>=10.4.0",
    "blind-watermark>=0.4.4",
    "numpy==1.26.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPLv3"}


[tool.pdm]
distribution = false
